--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     </section>
     <section id="circle">
-    <p class="circle__text">help me I am trapped in a box</p>
+    <p class="circle__text">css is awesome</p>
 
     </section>
 </body>
